0.8.11 (?/?/2014):
------------------

- Added new partition type codes for Ceph
  (https://github.com/ceph/ceph/blob/9bcc42a3e6b08521694b5c0228b2c6ed7b3d312e/src/ceph-disk#L76-L81):
  4FBD7E29-9D25-41B8-AFD0-062C0CEFF05D/0xf800 (Ceph OSD),
  4FBD7E29-9D25-41B8-AFD0-5EC00CEFF05D/0xf801 (Ceph dm-crypt OSD),
  BFBFAFE7-A34F-448A-9A5B-6213EB736C22/0xf802 (Ceph journal),
  45B0969E-9B03-4F30-B4C6-5EC00CEFF106/0xf803 (Ceph dm-crypt journal),
  89C57F98-2FE5-4DC0-89C1-F3AD0CEFF2BE/0xf804 (Ceph disk in creation), and
  89C57F98-2FE5-4DC0-89C1-5EC00CEFF2BE/0xf805 (Ceph dm-crypt disk in
  creation)

- Added new partition type codes from
  http://www.freedesktop.org/wiki/Specifications/DiscoverablePartitionsSpec/:
  44479540-F297-41B2-9AF7-D131D5F0458A/0x8303 (Linux / on x86),
  4F68BCE3-E8CD-4DB1-96E7-FBCAF984B709/0x8304 (Linux / on x86-64),
  B921B045-1DF0-41C3-AF44-4C6F280D3FAE/0x8305 (Linux / on 64-bit ARM),
  3B8F8425-20E0-4F3B-907F-1A25A76F98E8/0x8306 (Linux /srv).

0.8.10 (3/2/2014):
------------------

- Added feature to sgdisk's -A/--attributes, -c/--change-name,
  -t/--typecode, and -u/--partition-guid commands: If a -n/--new option
  with "0" as the partition number precedes these options on the command
  line, passin "0" as the partition number to the following options causes
  them to use the newly-created partition. For instance, "sgdisk -n
  0:0:+550M -t 0:EF00 /dev/sda" creates a new partition with a type code of
  EF00. (Previous versions would ignore the "-t 0:EF00" option.)

- Fixed bug that caused incorrect partition number to be displayed by
  sgdisk in error messages when the user specified a non-existent partition
  for inclusion in a hybrid MBR or conversion to a conventional MBR.

- Fixed new (in 0.8.9) bug that caused a failure to create more than one
  hybridized partition when creating a hybrid MBR.

- Fixed bug that caused gdisk and sgdisk to create hybridized partitions
  that ended at or above the 2^32 sector point with incorrect end values.